tests/paczka1/fuzzy1/97473358.err
Error in line 12: QXZg A331 73,3
Error in line 14: QXZg A862 99,1
Error in line 16: QXZg A7 40,1
Error in line 13: JZz3Gpv A331 20,8
Error in line 25: JZz3Gpv A7 37,0
Error in line 28: JZz3Gpv A331 89,5
Error in line 23: ZUyzV A7 71,9
Error in line 24: QXZg A331 208,7
Error in line 38: Nrozev A862 -2,5
